--- a/home-page/html/home.html
+++ b/home-page/html/home.html
@@ -603,7 +603,8 @@
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end">
                                 <li><a class="dropdown-item" href="profile.html#profile">Chỉnh Sửa Thông Tin</a></li>
-                                <li><a class="dropdown-item" href="orderHistory.html">Xem Đơn Hàng</a></li>
+                                <li><a class="dropdown-item" href="orderTrack.html">Trạng Thái Đơn Hàng</a></li>
+                                <li><a class="dropdown-item" href="orderHistory.html">Lịch Sử Đơn Hàng</a></li>
                                 <li><a class="dropdown-item" href="#" onclick="try { logout(); } catch(e) { console.error('Error logging out:', e); showNotification('Lỗi khi đăng xuất: ' + e.message); }">Đăng Xuất</a></li>
                             </ul>
                         </div>
