--- a/home-page/html/orderHistory.html
+++ b/home-page/html/orderHistory.html
@@ -280,27 +280,27 @@
   <aside class="sidebar w-80 flex flex-col justify-between">
     <div>
       <div class="sidebar-header p-6">
-        <h2 class="text-xl font-semibold ">Dashboard</h2>
-        <p id="username-greeting" class="text-sm mt-1">Welcome, User!</p>
+        <h2 class="text-xl font-semibold ">Quản lý tài khoản/h2>
+        <p id="username-greeting" class="text-sm mt-1">Chào, User!</p>
       </div>
       <nav class="mt-2 px-3">
         <a href="profile.html" id="profile-link" class="sidebar-link">
-          <i class="fas fa-user"></i> Edit Profile
+          <i class="fas fa-user"></i> Chỉnh sửa thông tin
         </a>
         <a href="ordertrack.html" id="order-track-link" class="sidebar-link">
-          <i class="fas fa-truck"></i> Order Tracking
+          <i class="fas fa-truck"></i> Theo dõi đơn hàng
         </a>
         <a href="orderHistory.html" id="order-history-link" class="sidebar-link active">
-          <i class="fas fa-history"></i> Order History
+          <i class="fas fa-history"></i> Lịch sử đơn hàng
         </a>
         <a href="home.html" id="home-link" class="sidebar-link">
-          <i class="fas fa-home"></i> Back to Home
+          <i class="fas fa-home"></i> Trở về trang chủ
         </a>
       </nav>
     </div>
     <div class="p-6">
       <button id="logout-button" class="w-full btn btn-logout">
-        <i class="fas fa-sign-out-alt mr-2"></i> Logout
+        <i class="fas fa-sign-out-alt mr-2"></i> Đăng xuất
       </button>
     </div>
   </aside>
@@ -309,7 +309,7 @@
     <div id="content-area" class="max-w-5xl mx-auto space-y-8">
       <div id="order-history-section" class="content-card p-6">
         <div class="section-header">
-          <h2><i class="fas fa-history"></i> Order History</h2>
+          <h2><i class="fas fa-history"></i> Lịch sử đơn hàng</h2>
         </div>
         <div id="error-message" class="hidden message message-error"></div>
         <div id="success-message" class="hidden message message-success"></div>
@@ -318,11 +318,11 @@
 
         <div id="pagination" class="flex justify-between items-center mt-6">
           <button id="prev-page" class="btn btn-primary disabled:bg-gray-400" disabled>
-            <i class="fas fa-chevron-left mr-2"></i> Previous
+            <i class="fas fa-chevron-left mr-2"></i> Trước
           </button>
           <span id="page-info" class="text-gray-600 font-medium"></span>
           <button id="next-page" class="btn btn-primary disabled:bg-gray-400">
-            Next <i class="fas fa-chevron-right ml-2"></i>
+            Sau <i class="fas fa-chevron-right ml-2"></i>
           </button>
         </div>
       </div>
@@ -384,7 +384,7 @@
       const usernameGreeting = document.getElementById('username-greeting');
       if (isLoggedIn() && usernameGreeting) {
         const username = await fetchUserInfo();
-        usernameGreeting.textContent = `Welcome, ${username}!`;
+        usernameGreeting.textContent = `Chào, ${username}!`;
         console.log("Cập nhật UI với username:", username);
       } else if (usernameGreeting) {
         usernameGreeting.textContent = 'Welcome, User!';
